[gd_scene load_steps=5 format=3 uid="uid://bxcosvmfin7xb"]

[ext_resource type="Script" path="res://scripts/SpeechUIManager.cs" id="1_fa0vc"]
[ext_resource type="Script" path="res://scripts/SpeechRecognizer.cs" id="2_o1r7v"]
[ext_resource type="Script" path="res://scripts/StateManager.gd" id="3_mutq6"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_u7qhk"]

[node name="Control" type="Control" node_paths=PackedStringArray("StartListeningButton", "partialResultText", "finalResultText", "speechRecognizer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fa0vc")
StartListeningButton = NodePath("StartListeningButton")
partialResultText = NodePath("PartialResult")
finalResultText = NodePath("FinalResult")
speechRecognizer = NodePath("SpeechRecognizer")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 215.0
offset_right = 1073.0
offset_bottom = 455.0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 98.0
offset_right = 831.0
offset_bottom = 165.0
theme_override_font_sizes/font_size = 48
text = "Spell Casting"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PartialLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 149.0
offset_top = 239.0
offset_right = 252.0
offset_bottom = 262.0
text = "Partial Result:"

[node name="PartialResult" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 335.0
offset_top = 214.0
offset_right = 1079.0
offset_bottom = 291.0

[node name="FinalLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 305.0
offset_right = 305.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 32
text = "Spell:"

[node name="FinalResult" type="Label" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 297.0
offset_right = 1002.0
offset_bottom = 374.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="FinalResult"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.219608)

[node name="StartListeningButton" type="Button" parent="."]
layout_mode = 0
offset_left = 513.0
offset_top = 496.0
offset_right = 705.0
offset_bottom = 561.0
text = "Start Casting"

[node name="MicrophoneStream" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_u7qhk")
autoplay = true
bus = &"Record"

[node name="SpeechRecognizer" type="Node" parent="."]
script = ExtResource("2_o1r7v")

[node name="StateManager" type="Node" parent="."]
script = ExtResource("3_mutq6")

[node name="ErrorLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 473.0
offset_top = 397.0
offset_right = 749.0
offset_bottom = 431.0
theme_override_font_sizes/font_size = 24
text = "There Is No Such Spell..."

[node name="SpellCue" type="AudioStreamPlayer" parent="."]

[connection signal="OnFinalResult" from="SpeechRecognizer" to="." method="_on_speech_recognizer_on_final_result"]
[connection signal="OnFinalResult" from="SpeechRecognizer" to="StateManager" method="_on_speech_recognizer_on_final_result"]
